[metadata]
name = netbox_exporter
version = 0.1.0
author = Brian Wiborg
author_email = wiborg@team.snafu.de
description = 'Fetch and export your Netbox inventory to a local directory.'
long_description = file: README.md
long_description_content_type = text/markdown
# url =
# project_urls =
#     Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    netbox_export = netbox_exporter.cli:main

